# company-employees

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  server.rs
cli/src/server/: process_command.rs  run.rs
cli/tests/: integration_test.rs
common/: Cargo.toml
common/src/: common.rs  lib.rs
common/src/add_employee/: add.rs  test_add.rs
common/src/get_employee/: get.rs  test_get.rs
data/: company.json
http/: Cargo.toml
http/src/: handle_requests.rs  http.rs  lib.rs  requests.rs  server.rs
http/src/requests/: get.rs  post.rs
http/src/server/: handle_requests.rs
http/tests/: integration_test.rs
src/: common.rs  company.rs  employee_action.rs  employees.rs  lib.rs  main.rs
src/add_employee/: add.rs  test_add.rs
src/company/: common.rs
src/company/add_employee/: add.rs  test_add.rs
src/company/get_employee/: get.rs  test_get.rs
src/employee_action/: add_employee.rs  get_employee.rs
src/employees/: action.rs  mod.rs  test_action.rs
src/employees/add/: mod.rs  test_add.rs
src/employees/get/: mod.rs  test_get.rs
src/get_employee/: get.rs  test_get.rs
tests/: integration_test.rs
tests/common/: mod.rs
