[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", version = "0.1.0" }
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.4"
