[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", version = "0.1.0" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
url = "2.2.2"
